<?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/agric4"
     tools:context=".activities.SigninActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:gravity="center_horizontal"
      android:orientation="vertical">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_40sdp"
      android:text="@string/Welcome_Back"
      android:textColor="@color/primary"
      android:textSize="@dimen/_18ssp"
      android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/Login_to_continue"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        />


      <EditText
          android:id="@+id/inputEmail"
          android:layout_width="294dp"
          android:layout_height="@dimen/_45sdp"
          android:layout_marginTop="@dimen/_40sdp"
          android:background="@drawable/background_input"
          android:hint="@string/Email"
          android:textColorHint="@color/primary_black"
          android:imeOptions="actionNext"
          android:importantForAutofill="no"
          android:inputType="textEmailAddress"
          android:paddingStart="@dimen/_16sdp"
          android:paddingEnd="@dimen/_16sdp"
          android:textColor="@color/primary"
          android:textSize="@dimen/_13ssp"
          tools:ignore="HardcodedText" />

      <EditText
          android:id="@+id/inputPassword"
          android:layout_width="296dp"
          android:layout_height="@dimen/_45sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:background="@drawable/background_input"
          android:hint="@string/Password"
          android:textColorHint="@color/primary_black"
          android:imeOptions="actionDone"
          android:importantForAutofill="no"
          android:inputType="textPassword"
          android:paddingStart="@dimen/_16sdp"
          android:paddingEnd="@dimen/_16sdp"
          android:textColor="@color/primary"
          android:textSize="@dimen/_13ssp"
          tools:ignore="HardcodedText" />
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:animateLayoutChanges="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="155dp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        tools:ignore="HardcodedText" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25ssp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>


          <TextView
              android:id="@+id/textCreateNewAccount"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_30sdp"
              android:text="@string/Create_New_Account"
              android:textColor="@color/primary"
              android:textSize="@dimen/_19sdp"
              android:textStyle="bold"
              app:cornerRadius="@dimen/_8sdp"
              android:layout_gravity="center"
             /> >
  </LinearLayout>

</RelativeLayout>