<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/agric4"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/LayoutImage"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_marginTop="@dimen/_24sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="119dp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Add_Image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_13ssp" />
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="294dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_input"
            android:hint="@string/Name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/primary_black"
            android:textSize="@dimen/_13ssp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="294dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/Email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary_black"
            android:textSize="@dimen/_13ssp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="296dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/Password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary_black"
            android:textSize="@dimen/_13ssp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="296dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/Confirm_Password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary_black"
            android:textSize="@dimen/_13ssp"
            tools:ignore="HardcodedText" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignup"
                android:layout_width="155dp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                tools:ignore="HardcodedText" />

            <ProgressBar
                android:id="@+id/ProgressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25ssp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>


        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/LOGIN"
            android:textColor="@color/primary"
            android:textSize="@dimen/_19sdp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>